# coupon

./: .gitignore  checkpoint.pt  cost_aware.py  cost_aware_archive.py  cost_aware_archive_uehara.py  cost_unaware.py  cost_unaware_.py  cost_unaware_archive.py  direting_heterogenius_causal_learning.ipynb  inference.py  init_data.py  main.py  make_synthetic.ipynb  model.pth  model_DR.pth  model_DR_0.0.pth  model_DR_0.025.pth  model_DR_0.05.pth  model_DR_0.05_0.0.pth  model_DR_0.05_0.025.pth  model_DR_0.05_0.05.pth  model_DR_0.05_0.075.pth  model_DR_0.05_0.1.pth  model_DR_0.075.pth  model_DR_0.0_0.0.pth  model_DR_0.0_0.02.pth  model_DR_0.0_0.025.pth  model_DR_0.0_0.04.pth  model_DR_0.0_0.05.pth  model_DR_0.0_0.06.pth  model_DR_0.0_0.07.pth  model_DR_0.0_0.075.pth  model_DR_0.0_0.08.pth  model_DR_0.0_0.1.pth  model_DR_0.0_0.125.pth  model_DR_0.0_0.25.pth  model_DR_0.0_0.5.pth  model_DR_0.0_0.75.pth  model_DR_0.0_1.0.pth  model_DR_0.0_1.pth  (+43 more)
src/: early_stopping.py  make_data.py  trainer.py
src/evaluate/: evaluate.py
src/model/: common.py  direct.py  slearner.py  tpmsl_lgbm.py
src/prediction/: model.py  predict.py
src/preprocess/: make_data.py
