[tool.poetry]
name = "coupon"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "1.26.4"
pandas = "^2.2.2"
ipykernel = "^6.29.4"
ipywidgets = "^8.1.3"
matplotlib = "^3.9.0"
japanize-matplotlib = "^1.1.3"
scikit-learn = ">=1.0,<1.5"
econml = "^0.15.0"
seaborn = "^0.13.2"
scikit-uplift = "^0.5.1"
torch = "^2.3.1"
lightgbm = "^4.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
