[tool.poetry]
name = "coupon"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "1.26.4"
pandas = "^2.2.2"
ipykernel = "^6.29.4"
ipywidgets = "^8.1.3"
matplotlib = "^3.9.0"
japanize-matplotlib = "^1.1.3"
scikit-learn = ">=1.0,<1.5"
econml = "^0.15.0"
seaborn = "^0.13.2"
scikit-uplift = "^0.5.1"
torch = "^2.3.1"
lightgbm = "^4.4.0"
polars = "^0.20.31"
ruff = "^0.5.0"
mypy = "^1.10.1"
transformers = "^4.42.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
allow_redefinition = true
allow_untyped_globals = false
check_untyped_defs = true
color_output = true
disallow_incomplete_defs = true
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_untyped_defs = true
error_summary = true
ignore_missing_imports = true
implicit_reexport = false
namespace_packages = true
no_implicit_optional = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
show_traceback = true
strict = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = false